Updates to shell and compact nonlinear implementation

--- a/src/linear_algebra/CMakeLists.txt
+++ b/src/linear_algebra/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(SRC
     MatrixShell.cc
     Vector.cc
     EigenSolver.cc
+    NonlinearSolver.cc
 )
 
 #-------------------------------------#
