Lots of cleanup.  Added support for Newton solvers.

--- a/src/erme_solver/test/CMakeLists.txt
+++ b/src/erme_solver/test/CMakeLists.txt
@@ -8,12 +8,10 @@ message( "++ Adding serment erme_solvers tests." )
 # Create test executables
 #------------------------------------------------------------------------------#
 
+ADD_EXECUTABLE(test_NonlinearResidual               test_NonlinearResidual.cc)
+TARGET_LINK_LIBRARIES(test_NonlinearResidual        erme_solver)
+ADD_TEST(test_NonlinearResidual                     test_NonlinearResidual 0)
+
 ADD_EXECUTABLE(test_GlobalSolverPicard				test_GlobalSolverPicard.cc)
 TARGET_LINK_LIBRARIES(test_GlobalSolverPicard 		erme_solver)
-
-#------------------------------------------------------------------------------#
-# Define tests
-#------------------------------------------------------------------------------#
-
-ADD_TEST(test_GlobalSolverPicard 			test_GlobalSolverPicard 0)
-
+ADD_TEST(test_GlobalSolverPicard                    test_GlobalSolverPicard 0)
