Further updates for Newton and Detran changes

--- a/src/erme_solver/test/CMakeLists.txt
+++ b/src/erme_solver/test/CMakeLists.txt
@@ -15,3 +15,7 @@ ADD_TEST(test_NonlinearResidual                     test_NonlinearResidual 0)
 ADD_EXECUTABLE(test_GlobalSolverPicard				test_GlobalSolverPicard.cc)
 TARGET_LINK_LIBRARIES(test_GlobalSolverPicard 		erme_solver)
 ADD_TEST(test_GlobalSolverPicard                    test_GlobalSolverPicard 0)
+
+ADD_EXECUTABLE(test_GlobalSolverNewton              test_GlobalSolverNewton.cc)
+TARGET_LINK_LIBRARIES(test_GlobalSolverNewton       erme_solver)
+ADD_TEST(test_GlobalSolverNewton                    test_GlobalSolverNewton 0)
