Added options to accelerate Picard.  An exponential relation between lambda and keff gives pretty nice results.

--- a/src/erme_solver/test/CMakeLists.txt
+++ b/src/erme_solver/test/CMakeLists.txt
@@ -12,6 +12,10 @@ ADD_EXECUTABLE(test_NonlinearResidual               test_NonlinearResidual.cc)
 TARGET_LINK_LIBRARIES(test_NonlinearResidual        erme_solver)
 ADD_TEST(test_NonlinearResidual                     test_NonlinearResidual 0)
 
+ADD_EXECUTABLE(test_Jacobian                        test_Jacobian.cc)
+TARGET_LINK_LIBRARIES(test_Jacobian                 erme_solver)
+ADD_TEST(test_Jacobian                              test_Jacobian 0)
+
 ADD_EXECUTABLE(test_GlobalSolverPicard				test_GlobalSolverPicard.cc)
 TARGET_LINK_LIBRARIES(test_GlobalSolverPicard 		erme_solver)
 ADD_TEST(test_GlobalSolverPicard                    test_GlobalSolverPicard 0)
@@ -19,3 +23,12 @@ ADD_TEST(test_GlobalSolverPicard                    test_GlobalSolverPicard 0)
 ADD_EXECUTABLE(test_GlobalSolverNewton              test_GlobalSolverNewton.cc)
 TARGET_LINK_LIBRARIES(test_GlobalSolverNewton       erme_solver)
 ADD_TEST(test_GlobalSolverNewton                    test_GlobalSolverNewton 0)
+
+ADD_EXECUTABLE(test_EigenvalueUpdate                test_EigenvalueUpdate.cc)
+TARGET_LINK_LIBRARIES(test_EigenvalueUpdate         erme_solver)
+ADD_TEST(test_EigenvalueUpdate                      test_EigenvalueUpdate 0)
+ADD_TEST(test_SteffenseneUpdate                     test_EigenvalueUpdate 1)
+ADD_TEST(test_AnghelUpdateEXP                       test_EigenvalueUpdate 2)
+ADD_TEST(test_AnghelUpdateLINLIN                    test_EigenvalueUpdate 2)
+ADD_TEST(test_AnghelUpdateINVLIN                    test_EigenvalueUpdate 3)
+ADD_TEST(test_AnghelUpdateINVINV                    test_EigenvalueUpdate 4)
