Corrected update order so that the Jacobian and Residual are now in sync

--- a/src/erme_solver/CMakeLists.txt
+++ b/src/erme_solver/CMakeLists.txt
@@ -12,9 +12,11 @@ SET(SRC
     GlobalSolverBase.cc
     GlobalSolverPicard.cc
     GlobalSolverNewton.cc
+    GlobalSolverSteffensen.cc
     Jacobian.cc
     FullJacobian.cc
     ManagerERME.cc    
+    NonlinearResidual.cc
 )
 
 #-------------------------------------#
