Memory fixes and small global solver updates

--- a/src/xerme/CMakeLists.txt
+++ b/src/xerme/CMakeLists.txt
@@ -20,7 +20,8 @@ add_executable(serment
                ${SRC} 
 )
 TARGET_LINK_LIBRARIES(serment 
-                      erme_utils                 
+                      erme_utils     
+                      ${GPERFTOOLS_LIBRARIES}
 )
 
 INSTALL_FILES(/include .hh)
